--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,7 @@
 en:
   blog_name: "Lane Zhang's Blog"
   headline: "Lane Zhang's Blog - A Programmer's Soliloquy"
-  brief_personal_introduction: "Hi, my name is Lane Zhang. Let the readers know what unique value you can bring to him/her."
+  brief_personal_introduction: "Hi, my name is Lane Zhang. Let the readers know what unique value you can bring to him/her here."
   author: "Lane Zhang"
 
   find_more_about_me: "Find out more about me"
@@ -10,7 +10,7 @@ en:
   subscribe: "Subscribe"
   subscribe_to_receive_email: "Welcome to my blog. Subscribe via email to never miss my latest posts!"
 
-  published_at: "Published"
+  posted_at: "Posted"
 
   # More information at https://github.com/svenfuchs/rails-i18n/tree/master/rails/locale
   datetime:
