Displayed the icons of settings in `left siderbar`; Perfected the experiences of settings edit page.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,8 +1,8 @@
 en:
-  author_name: "Lane Zhang"
-  blog_name: "Lane Zhang's Blog"
-  headline: "Lane Zhang's Blog - A Programmer's Soliloquy"
-  brief_personal_introduction: "Hi, my name is Lane Zhang. Let the readers know what unique value you can bring to him/her here."
+  author_name: "John Doe"
+  blog_name: "John Doe's Blog"
+  headline: "John Doe's Blog - A Programmer's Soliloquy"
+  brief_personal_introduction: "Hi, my name is John Doe. Let the readers know what unique value you can bring to him/her here."
 
   find_more_about_me: "Find out more about me"
   get_in_touch: "Get in Touch"
