Updated `Get in Touch` to `Hire Me`.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,7 +5,7 @@ en:
   brief_personal_introduction: "Hi, my name is John Doe. Let the readers know what unique value you can bring to him/her here."
 
   find_more_about_me: "Find out more about me"
-  get_in_touch: "Get in Touch"
+  get_in_touch: "Hire Me Now!"
 
   subscribe: "Subscribe"
   subscribe_to_receive_email: "Welcome to my blog. Subscribe via email to never miss my latest posts!"
