--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,11 +11,35 @@ en:
   subscribe_to_receive_email: "Welcome to my blog. Subscribe via email to never miss my latest posts!"
   author: "Author"
   posted_at: "Posted"
+  enter_email: "Enter email"
 
   email: "Email"
   wechat_id: "WeChat ID"
   linkedin_profile_url: "LinkedIn profile URL"
   github_username: "GitHub Username"
+
+  # Subscription related translations
+  subscription:
+    success:
+      created: "Please check your email to confirm your subscription."
+      confirmed: "Your subscription has been confirmed. Thank you for subscribing!"
+    error:
+      invalid_token: "Invalid or expired confirmation link."
+      email_format: "is not a valid email address"
+      email_exists: "has already been subscribed"
+    button:
+      submit: "Subscribe"
+      subscribing: "Subscribing..."
+    label:
+      email: "Enter your email address"
+    confirmation:
+      subject: "Confirm your subscription"
+      instructions: "Thank you for subscribing. Please confirm your subscription by clicking the link below:"
+      button: "Confirm Subscription"
+      expiration_notice: "This link will expire in 7 days."
+    notification:
+      pending: "You have successfully subscribed. Please check your email to confirm your subscription."
+      success: "Thank you for subscribing! You will now receive updates when new content is published."
 
   # More information at https://github.com/svenfuchs/rails-i18n/tree/master/rails/locale
   datetime:
