--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -18,37 +18,19 @@ zh:
   linkedin_profile_url: "领英URL"
   github_username: "GitHub 用户名"
 
-  # Subscription related translations
   subscription:
     success:
-      created: "请查收邮件以确认您的订阅。"
-      confirmed: "您的订阅已确认。感谢您的订阅！"
-    error:
-      invalid_token: "无效或已过期的确认链接。"
-      email_format: "不是有效的电子邮件地址"
-      email_exists: "已经订阅过了"
-    button:
-      submit: "订阅"
-      subscribing: "订阅中..."
-    label:
-      email: "请输入您的电子邮件地址"
-    confirmation:
-      subject: "确认您的订阅"
-      instructions: "感谢您的订阅。请点击下方链接确认您的订阅："
-      button: "确认订阅"
-      expiration_notice: "此链接将在7天后失效。"
-    notification:
-      pending: "您已成功订阅。请查收邮件以确认您的订阅。"
-      success: "感谢您的订阅！当有新内容发布时，您将收到更新通知。"
+      created: "我们已向您的邮箱发送了一封订阅确认邮件。请查收邮件，并点击确认链接完成订阅！"
+#      confirmed: "您的订阅已确认。当有新文章发布时，您将收到邮件通知！"
 
-  # ActiveRecord errors
   activerecord:
     errors:
       models:
         email_subscriber:
           attributes:
             email:
-              taken: "该邮箱已被订阅，请使用其他邮箱"
+              already_confirmed: "地址已成功订阅。当有新文章发布时，您将收到邮件通知！"
+              pending_confirmation: "订阅已经登记，但尚未得到您的确认！请查收邮件，并点击“确认链接”完成订阅！"
 
   # More information at https://github.com/svenfuchs/rails-i18n/tree/master/rails/locale
   datetime:
