Translate en to zh.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,15 @@ en:
   blog_name: "John Doe's Blog"
   headline: "John Doe's Blog - A Programmer's Soliloquy"
   brief_personal_introduction: "Hi, my name is John Doe. Let the readers know what unique value you can bring to him/her here."
+  blog_home: "Blog Home"
+  about_me: "About Me"
+  admin: "Admin"
+  read_more: "Read more"
+  min_read: "min read"
+  previous_page: "Previous"
+  next_page: "Next"
+  newer_post: "Newer Post"
+  older_post: "Older Post"
 
   find_more_about_me: "Find out more about me"
   get_in_touch: "Hire Me Now!"
@@ -13,6 +22,9 @@ en:
   posted_at: "Posted"
   enter_email: "Enter email"
 
+  welcome_admin: "Welcome, administrator %{email}!"
+  create_a_post: "Create a post"
+  log_out: "Log out"
   email: "Email"
   wechat_id: "WeChat ID"
   linkedin_profile_url: "LinkedIn profile URL"
