--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -3,6 +3,15 @@ zh:
   blog_name: "张三的博客"
   headline: "张三的博客 - 一个程序员的自白"
   brief_personal_introduction: "嗨，我是张三。这里介绍下自己，说出自己能为读者带来什么独特的价值。如：我是一名全栈工程师，如果你想学 Web 开发，找我就对了！"
+  blog_home: "博客首页"
+  about_me: "关于我"
+  admin: "管理员"
+  read_more: "更多"
+  min_read: "分钟阅读"
+  previous_page: "上一页"
+  next_page: "下一页"
+  newer_post: "新一篇"
+  older_post: "旧一篇"
 
   find_more_about_me: "进一步了解我"
   get_in_touch: "来雇用我吧！"
@@ -13,6 +22,9 @@ zh:
   posted_at: "发布于"
   enter_email: "请输入邮箱"
 
+  welcome_admin: "欢迎你，管理员%{email}！"
+  create_a_post: "创建博文"
+  log_out: "退出登录"
   email: "电子邮箱"
   wechat_id: "微信号"
   linkedin_profile_url: "领英URL"
