--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -23,6 +23,7 @@ zh:
   enter_email: "请输入邮箱"
 
   welcome_admin: "欢迎你，管理员%{email}！"
+  change_profile_avatar: "更换头像"
   create_a_post: "创建博文"
   log_out: "退出登录"
   email: "电子邮箱"
