Allowed admin to View/create/Delete Email Subscribers.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,8 @@ en:
   change_profile_avatar: "Change profile avatar"
   create_a_post: "Create a post"
   log_out: "Log out"
+  back: "Back"
+
   email: "Email"
   wechat_id: "WeChat ID"
   linkedin_profile_url: "LinkedIn profile URL"
