Shortened `:subscribe_to_receive_email`.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,7 +18,7 @@ en:
   get_in_touch: "Hire Me Now!"
 
   subscribe: "Subscribe"
-  subscribe_to_receive_email: "Welcome to my blog. Subscribe via email to never miss my latest posts!"
+  subscribe_to_receive_email: "Subscribe via email to never miss my latest posts!"
   author: "Author"
   posted_at: "Posted"
   enter_email: "Enter email"
