--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -18,7 +18,7 @@ zh:
   get_in_touch: "来雇用我吧！"
 
   subscribe: "订阅"
-  subscribe_to_receive_email: "欢迎光临我的博客。通过邮件订阅，不再错过我的最新文章！"
+  subscribe_to_receive_email: "通过邮件订阅，不再错过我的最新文章！"
   author: "作者"
   posted_at: "发布于"
   enter_email: "请输入邮箱"
