--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -68,18 +68,18 @@ en:
         one: "%{count} year ago"
         other: "%{count} years ago"
       almost_x_years:
-        one: almost %{count} year
-        other: almost %{count} years
-      half_a_minute: half a minute ago
+        one: "almost %{count} year"
+        other: "almost %{count} years"
+      half_a_minute: "half a minute ago"
       less_than_x_seconds:
-        one: less than %{count} second
-        other: less than %{count} seconds
+        one: "less than %{count} second"
+        other: "less than %{count} seconds"
       less_than_x_minutes:
-        one: less than a minute
-        other: less than %{count} minutes
+        one: "less than a minute"
+        other: "less than %{count} minutes"
       over_x_years:
-        one: over %{count} year
-        other: over %{count} years
+        one: "over %{count} year"
+        other: "over %{count} years"
       x_seconds:
         one: "within %{count} second"
         other: "within %{count} seconds"
@@ -95,33 +95,3 @@ en:
       x_years:
         one: "%{count} year ago"
         other: "%{count} years ago"
-
-
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
