Feature & Bugfix: Update the language menu links when URL changed; If a translation doesn't exist, in the post show page, display an `no title` information and ask robots not index the page; Bugfix: For the `<link rel="alternate" hreflang=`, only display the links which have translation.

--- a/config/locales/de-DE.yml
+++ b/config/locales/de-DE.yml
@@ -32,7 +32,11 @@ de-DE:
   email: "E-Mail"
   wechat_id: "WeChat-ID"
   linkedin_profile_url: "LinkedIn-Profil-URL"
-  github_username: "GitHub-Benutzername"
+  github_username: "GitHub Benutzername"
+
+  post:
+    no_title: "Kein Titel"
+    no_content: "Kein Inhalt, da der Autor diesen Beitrag noch nicht in '%{language}' übersetzt hat."
 
   subscription:
     success:
