--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -34,6 +34,10 @@ ru:
   linkedin_profile_url: "URL профиля LinkedIn"
   github_username: "Имя пользователя GitHub"
 
+  post:
+    no_title: "Без названия"
+    no_content: "Нет содержимого, так как автор еще не перевел эту запись на '%{language}'."
+
   subscription:
     success:
       created: "Мы отправили письмо с подтверждением подписки на ваш адрес электронной почты. Пожалуйста, проверьте свою почту и нажмите на ссылку подтверждения, чтобы завершить подписку!"
